--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,37 @@
+/* Nord color scheme */
+/* https://www.nordtheme.com/ */
+:root {
+  /* Dark mode */
+  --background-dark: #242933;
+  --primary-dark: #2E3440;
+  --secondary-dark: #3B4252;
+  --tertiary-dark: #434C5E;
+  --font-color-dark: #ECEFF4;
+  --box-shadow-dark: rgb(15 17 21 / 25%) 0px 4px 6px, rgb(15 17 21 / 10%) 0px 5px 7px;
+  /* Light mode */
+  --background-light: #F2F4F8;
+  --primary-light: #fff;
+  --secondary-dark: #ECEFF4;
+  --tertiary-dark: #E5E9F0;
+  --highlight-dark: #4C566A;
+  --font-color-light: #4C566A;
+  --box-shadow-light: rgb(184 194 215 / 25%) 0px 4px 6px, rgb(184 194 215 / 10%) 0px 5px 7px;;
+  /* misc colors */
+  --page-action-btn: #88C0D0;
+  /* Theme color */
+  --page-font-color: var(--font-color-dark); /* theme color for font */
+  --page-box-shadow: var(--box-shadow-dark); /* theme color for font */
+  --page-primary-color: var(--primary-dark); /* theme background color*/
+  --page-background-color: var(--background-dark); /* theme background color*/
+}
+
+html {
+  text-size-adjust: 100%;
+}
+
 html,
 body {
-  font-size: 14px;
+  font-size: 16px;
 }
 
 html,
@@ -12,13 +43,13 @@ body,
 
 body {
   margin: 0;
-  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #2F363D;
-  background-color: #F9F9FB;
+  color: var(--page-font-color);
+  background-color: var(--page-background-color);
 }
 
 * {
@@ -28,4 +59,15 @@ body {
 *::after,
 *::before {
   box-sizing: inherit;
+}
+
+select,
+button {
+  font-family: inherit;
+  font-weight: 400;
+}
+
+.ReactVirtualized__Grid,
+.ReactVirtualized__Grid__innerScrollContainer {
+  outline: none;
 }
